# zk-cryptography-research-implementations

./: Cargo.toml
circuit/: Cargo.toml
circuit/src/: arithmetic_circuit.rs  lib.rs
fibonacci_evaluation/: Cargo.toml
fibonacci_evaluation/src/: fib_eval.rs  lib.rs
gkr/: Cargo.toml
gkr/benches/: gkr_protocol_benchmark.rs  succinct_gkr_benchmark.rs
gkr/src/: gkr_protocol.rs  lib.rs  protocol.rs  succinct_gkr_protocol.rs  utils.rs
kzg/: Cargo.toml
kzg/src/: lib.rs  multilinear_kzg.rs  trusted_setup.rs
multilinear_kzg/: Cargo.toml
multilinear_kzg/src/: multilinear_kzg.rs  trusted_setup.rs
polynomials/: Cargo.toml
polynomials/benches/: dense_univariate_benchmark.rs  densed_univariate_benchmark.rs
polynomials/src/: lib.rs
polynomials/src/composed/: composed_multilinear.rs  mod.rs  product_polynomial.rs  sum_polynomial.rs
polynomials/src/multilinear/: mod.rs  (+2 more)
polynomials/univariate/: Cargo.toml
shamir_secret_sharing/: Cargo.toml
shamir_secret_sharing/src/: lib.rs  shamir_s_sharing.rs  shamir_secret_sharing.rs
sumcheck_protocol/: Cargo.toml
sumcheck_protocol/benches/: basic_sumcheck_benchmark.rs  gkr_sumcheck_benchmark.rs
sumcheck_protocol/src/: lib.rs  protocol.rs  prover.rs  sumcheck_interactive_simulation.rs  verifier.rs
sumcheck_protocol/src/basic_sumcheck/: mod.rs  protocol.rs  prover.rs  sumcheck_interactive_simulation.rs  verifier.rs
sumcheck_protocol/src/gkr_sumcheck/: gkr_sumcheck_protocol.rs  mod.rs  sumcheck_gkr_protocol.rs  sumcheck_protocol.rs
transcripts/: Cargo.toml
univariate_interpolation_sparsed/src/: main.rs
(+15 files in other folders)
