[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
polynomials = { path = "../polynomials" }
sumcheck_protocol = { path = "../sumcheck_protocol" }
circuit = { path = "../circuit" }
transcripts = { path = "../transcripts"}
multilinear_kzg = { path = "../multilinear_kzg"}
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-bls12-381 = "0.5.0"

[dev-dependencies]
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }