[package]
name = "sumcheck_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
transcripts = { path = "../transcripts" }
polynomials = { path = "../polynomials" }
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
rand = "0.8.5"

[dev-dependencies]
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }
criterion = "0.5.1"

[[bench]]
name = "basic_sumcheck_benchmark"
harness = false

[[bench]]
name = "gkr_sumcheck_benchmark"
harness = false